Change card-vote justify-content property to center to fix desktop view misalignment

--- a/src/styles/media.css
+++ b/src/styles/media.css
@@ -26,6 +26,7 @@
 
     .card-vote {
         grid-area: 1 / 1 / 4 / 2;
+        justify-content: space-around;
         flex-direction: column;
     }
 
